[CLASE 3] -> Intro a manipulacion de datos con R -> utilizando Visual Studio Code

--- a/R-Clases/week-1/clase_2/clase_2_00_etl_test.Rmd
+++ b/R-Clases/week-1/clase_2/clase_2_00_etl_test.Rmd
@@ -35,10 +35,10 @@ lapply(needed_to_install, install.packages)
 ```
 
 
-```{r setup, include=FALSE}
+```{R setup, include=FALSE}
 # Carga de librerías clave
 
-library(tidyverse)   # dplyr, ggplot2, readr, etc.
+library(tidyverse)   # dplyr, ggplot2, readr, etc.  
 library(DT)          # Tablas interactivas
 library(plotly)      # Gráficos interactivos
 library(corrplot)    # Mapa de correlaciones
