--- a/R-Clases/week-1/clase_2/challenge/solucion.challenge.Rmd
+++ b/R-Clases/week-1/clase_2/challenge/solucion.challenge.Rmd
@@ -7,7 +7,7 @@ lapply(missing_dependencies,install.packages)
 ```
 
 # Cargar las librerías necesarias
-```{R lib-load}
+```{R lib-loading}
 library(dplyr)
 library(stringr)
 library(readr)
@@ -119,47 +119,30 @@ print(edad_stats)
 glimpse(clientes_transformado)
 ```
 
-# 5. VISUALIZACIÓN (DESAFÍO ADICIONAL)
-# =====================================
 
-if (exists("tabla_resumen") && nrow(tabla_resumen) > 0) {
-  # Gráfico de barras para distribución de clientes por país
-  grafico_paises <- ggplot(tabla_resumen, aes(x = reorder(!!sym(col_pais), total_clientes), 
-                                              y = total_clientes)) +
-    geom_bar(stat = "identity", fill = "steelblue", alpha = 0.7) +
-    coord_flip() +
-    labs(
-      title = "Distribución de Clientes por País",
-      x = "País",
-      y = "Número de Clientes",
-      caption = "Datos procesados y transformados"
+
+# GRAFICO CLIENTES POR PAIS
+```{R visual}
+# Gráfico de barras: Clientes por país
+ggplot(tabla_resumen,
+    aes(x = reorder(Country, total_clientes),
+    y = total_clientes)
     ) +
-    theme_minimal() +
-    theme(
-      plot.title = element_text(hjust = 0.5, size = 14, face = "bold"),
-      axis.text = element_text(size = 10),
-      axis.title = element_text(size = 12)
+  geom_bar(stat = "identity", fill = "steelblue") +
+  coord_flip() +
+  geom_text(aes(label = total_clientes), hjust = -0.1, size = 3) +
+  labs(title = "Clientes por País", x = "País", y = "Total de Clientes") +
+  theme_minimal() -> plot_cliente_pais
+
+print(plot_cliente_pais)
+
+# Gráfico de edades aleatorias
+ggplot(clientes_transformado,
+    aes(x = edad_aleatoria)
     ) +
-    geom_text(aes(label = total_clientes), hjust = -0.1, size = 3)
-  
-  print(grafico_paises)
-  
-  # Gráfico de distribución de edades
-  grafico_edades <- ggplot(clientes_transformado, aes(x = edad_aleatoria)) +
-    geom_histogram(binwidth = 5, fill = "coral", alpha = 0.7, color = "black") +
-    labs(
-      title = "Distribución de Edades Aleatorias",
-      x = "Edad",
-      y = "Frecuencia",
-      caption = "Edades generadas aleatoriamente"
-    ) +
-    theme_minimal() +
-    theme(
-      plot.title = element_text(hjust = 0.5, size = 14, face = "bold")
-    )
-  
-  print(grafico_edades)
-  
-} else {
-  cat("\nNo se pudo crear la visualización debido a problemas con las columnas de datos.")
-}
+  geom_histogram(binwidth = 5, fill = "coral", color = "black") +
+  labs(title = "Distribución de Edades", x = "Edad", y = "Frecuencia") +
+  theme_minimal() -> plot_edad_hist
+
+print(plot_edad_hist)
+```
