[FUNCIONES] Agregado de primera parte de functions en R

--- a/R-Clases/week-1/clase_3/challenge/ejercicios_data_cleansing.Rmd
+++ b/R-Clases/week-1/clase_3/challenge/ejercicios_data_cleansing.Rmd
@@ -1,4 +1,4 @@
-## Ejercicio 1: Limpieza Básica de Datos
+## Challenge Limpieza de Datos parte 2
 
 **Enunciado:**
 Crea un dataframe con los siguientes datos problemáticos y aplica estas operaciones:
