--- a/R-Clases/week-1/clase_4/00_functiones_en_r.Rmd
+++ b/R-Clases/week-1/clase_4/00_functiones_en_r.Rmd
@@ -1,7 +1,20 @@
 ---
 title: "Funciones en R"
 author: "Anderson Ocaña"
-output: html_notebook
+date: "`r Sys.Date()`"
+output: 
+  # html_document:
+  #   toc: true
+  #   toc_float: true
+  #   theme: united
+  #   highlight: tango
+  #   code_folding: show
+  pdf_document:
+    toc: true
+    number_sections: true
+    highlight: tango
+fontsize: 10pt
+geometry: margin=1in
 ---
 
 Perfecto, acá tenés el contenido de la clase sin emojis, con una estructura clara para estudiantes de Data Science que ya manejan Python:
