--- a/R-Clases/week-1/clase_5/00_graficos_ggplot.Rmd
+++ b/R-Clases/week-1/clase_5/00_graficos_ggplot.Rmd
@@ -1,29 +1,62 @@
+---
+title: "Graficos con ggplot R"
+author: "Anderson Ocaña"
+date: "`r Sys.Date()`"
+output: 
+  html_document:
+    toc: true
+    toc_float: true
+    theme: united
+    highlight: tango
+    code_folding: show
+  pdf_document:
+    toc: true
+    number_sections: true
+    highlight: tango
+fontsize: 10pt
+geometry: margin=1in
+---
+
 # **Guía ggplot2 en R**
 
 ## **1. Instalación y Conceptos Básicos**
 ### Instalar ggplot2
-```r
+```{R dependecies-install}
 install.packages("ggplot2")  # Instalar
 library(ggplot2)            # Cargar
 ```
 
 ### Estructura básica de ggplot2:
+[GGPLOT Sheet-Cheat](https://ggplot2.tidyverse.org/)
+[GGPLOT Documentacion extra](https://dnme-minturdep.github.io/DT6_ciencia_de_datos_turismo/gr%C3%A1ficos-con-ggplot2.html)
+[DATASET ADICIONAL PARA JUGAR](https://gist.githubusercontent.com/Andru-1987/cd3d5ebc6a72a3e595e69ea7d1b7dd98/raw/e132db889b676c269fb9f9c016e76867df42ef25/visitas-residentes-y-no-residentes.csv)
+
 ```r
 ggplot(
-  data = datos,
-  aes(x = variable_x, y = variable_y)) +  # Capa base
-  geom_point()                                              # Capa visual
+  data = datos, # fuente de data
+  aes(x = variable_x, y = variable_y) # mapping columns 
+  ) +           # Capa base
+  geom_point() # Capa visual
 ```
 - **`data`**: Tu dataframe.
 - **`aes()`**: Estética (mapeo de variables a ejes/colores/tamaños).
 - **`geom_*()`**: Tipo de gráfico (puntos, líneas, barras, etc.).
 
+
+```{R loading-dataset}
+data(iris)
+head(iris)
+```
+
 ---
 
 ## **2. Gráficos Esenciales**
 ### **a) Gráfico de dispersión (`geom_point`)**
-```r
-ggplot(iris, aes(x = Sepal.Length, y = Sepal.Width, color = Species)) +
+```{R}
+ggplot(
+  iris,
+  aes(x = Sepal.Length, y = Sepal.Width, color = Species)
+  ) +
   geom_point(size = 3, alpha = 0.7) +
   labs(title = "Longitud vs Ancho del Sépalo", x = "Longitud", y = "Ancho")
 ```
@@ -31,25 +64,34 @@ ggplot(iris, aes(x = Sepal.Length, y = Sepal.Width, color = Species)) +
 - **`size`/`alpha`**: Tamaño y transparencia.
 
 ### **b) Histograma (`geom_histogram`)**
-```r
+```{R}
 ggplot(iris, aes(x = Sepal.Length, fill = Species)) +
   geom_histogram(binwidth = 0.2, position = "identity", alpha = 0.6) +
   labs(title = "Distribución de Longitud del Sépalo")
 ```
 
 ### **c) Boxplot (`geom_boxplot`)**
-```r
+```{R}
 ggplot(iris, aes(x = Species, y = Sepal.Length, fill = Species)) +
   geom_boxplot() +
   labs(title = "Boxplot por Especie")
 ```
 
 ### **d) Gráfico de líneas (`geom_line`)**
-```r
+```{R}
 library(dplyr)
-economics_agg <- economics %>% 
-  filter(year(date) >= 2000)
+data(economics)
+head(economics)
+glimpse(economics)
+```
 
+```{R economics-data-lines}
+economics_agg <- economics %>% 
+  filter(lubridate::year(date)>=2000)
+
+economics_agg
+
+```{R display-line-dates}
 ggplot(economics_agg, aes(x = date, y = unemploy)) +
   geom_line(color = "steelblue", linewidth = 1) +
   labs(title = "Desempleo en EE.UU. (2000-2015)")
@@ -59,8 +101,10 @@ ggplot(economics_agg, aes(x = date, y = unemploy)) +
 
 ## **3. Personalización Avanzada**
 ### **Temas y estilos**
-```r
-ggplot(iris, aes(x = Sepal.Length, y = Sepal.Width)) +
+
+```{R}
+ggplot(iris, aes(x = Sepal.Length, y = Sepal.Width, color="Species")) +
+  
   geom_point() +
   theme_minimal() +  # Temas: theme_classic(), theme_dark(), etc.
   theme(
@@ -70,14 +114,15 @@ ggplot(iris, aes(x = Sepal.Length, y = Sepal.Width)) +
 ```
 
 ### **Facetas (subgráficos)**
-```r
+```{R}
 ggplot(iris, aes(x = Sepal.Length, y = Sepal.Width)) +
   geom_point() +
-  facet_wrap(~Species, scales = "free")  # Una faceta por especie
+  facet_wrap(~Species, scales = "free") +  # Una faceta por especie
+  theme_minimal()
 ```
 
 ### **Leyendas y escalas**
-```r
+```{R}
 ggplot(iris, aes(x = Sepal.Length, y = Sepal.Width, color = Species)) +
   geom_point() +
   scale_color_manual(values = c("setosa" = "red", "versicolor" = "blue", "virginica" = "green")) +
@@ -88,26 +133,61 @@ ggplot(iris, aes(x = Sepal.Length, y = Sepal.Width, color = Species)) +
 
 ## **4. Gráficos Avanzados**
 ### **a) Densidad 2D (`geom_density_2d`)**
-```r
+```{R}
 ggplot(iris, aes(x = Sepal.Length, y = Sepal.Width)) +
   geom_density_2d_filled() +
   labs(title = "Densidad 2D")
 ```
 
 ### **b) Heatmap (`geom_tile`)**
-```r
-cor_matrix <- cor(iris[, 1:4])
-ggplot(reshape2::melt(cor_matrix), aes(x = Var1, y = Var2, fill = value)) +
+```{R matrix-correlation}
+library(ggplot2)
+library(dplyr)
+library(tidyr)
+
+# Matriz de correlación
+cor_matrix <- iris %>%
+  select(contains("Sepal"),contains("Petal")) %>%
+  cor()
+
+cor_matrix
+```
+```{R melt-dataset}
+
+# Convertir a tibble y "derretir" con pivot_longer
+
+correlation_map <- as.data.frame(cor_matrix) %>% 
+  mutate(Var1 = rownames(cor_matrix)) %>%
+  pivot_longer(
+    cols=-Var1,
+    names_to="Var2",
+    values_to="value"
+  )
+
+
+
+# Graficar
+ggplot(correlation_map, aes(x = Var1, y = Var2, fill = value)) +
   geom_tile() +
-  scale_fill_gradient2(low = "blue", high = "red", mid = "white", midpoint = 0)
+  geom_text(aes(label=round(value,2)),size=5) +
+  scale_fill_gradient2(
+    low = "blue",
+    high = "red",
+    mid = "white",
+    midpoint = 0
+  ) +
+  labs(fill="correlation") +
+  theme_minimal()
+
 ```
 
 ### **c) Gráfico interactivo con `plotly`**
-```r
+```{R ploty-conversion}
 library(plotly)
+
 p <- ggplot(iris, aes(x = Sepal.Length, y = Sepal.Width, color = Species)) +
   geom_point()
-ggplotly(p)  # Convierte ggplot en interactivo
+# ggplotly(p)  # Convierte ggplot en interactivo
 ```
 
 ---
@@ -124,3 +204,60 @@ ggplotly(p)  # Convierte ggplot en interactivo
 2. Genera un histograma de `price` en `diamonds`, dividido por `cut` con facetas.
 3. Personaliza un boxplot de `hp` por `gear` (en `mtcars`) con colores manuales y tema oscuro.
 
+<details>
+<summary>Respuesa de ejercicio practico</summary>
+
+library(ggplot2)
+library(dplyr)
+
+# Función para scatter plot
+scatter_plot <- function(data, x, y, color_var, title = NULL) {
+  ggplot(data, aes(x = !!sym(x), y = !!sym(y), color = factor(!!sym(color_var)))) +
+    geom_point(size = 3) +
+    labs(
+      title = title,
+      x = x,
+      y = y,
+      color = color_var
+    ) +
+    theme_minimal()
+}
+
+# Función para histograma con facetas
+histogram_faceted <- function(data, var, facet_var, binwidth = 500, fill = "steelblue") {
+  ggplot(data, aes(x = !!sym(var))) +
+    geom_histogram(binwidth = binwidth, fill = fill, color = "white") +
+    facet_wrap(vars(!!sym(facet_var))) +
+    labs(
+      title = paste("Distribución de", var, "por", facet_var),
+      x = var,
+      y = "Frecuencia"
+    ) +
+    theme_light()
+}
+
+# Función para boxplot con colores manuales
+boxplot_custom <- function(data, x, y, colors) {
+  ggplot(data, aes(x = factor(!!sym(x)), y = !!sym(y), fill = factor(!!sym(x)))) +
+    geom_boxplot() +
+    scale_fill_manual(values = colors) +
+    labs(
+      title = paste(y, "por", x),
+      x = x,
+      y = y,
+      fill = x
+    ) +
+    theme_dark()
+}
+
+# --- Uso de las funciones ---
+scatter_plot(mtcars, "wt", "mpg", "cyl", title = "MPG vs Peso del vehículo")
+
+histogram_faceted(diamonds, "price", "cut", binwidth = 500, fill = "skyblue")
+
+boxplot_custom(
+  mtcars, "gear", "hp",
+  colors = c("3" = "tomato", "4" = "seagreen", "5" = "goldenrod")
+)
+
+</details>
